--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* Estilos generales */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -8,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #752fe6; 
+    background-color: white; 
     padding: 20px;
     text-align: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -18,7 +23,8 @@ header {
 }
 
 .logo img {
-    max-width: 100px; /* Ancho máximo del logotipo */
+    height: auto;
+    max-width: 60px; /* Ancho máximo del logotipo */
     border-radius: 60px;
 }
 
@@ -29,28 +35,41 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 3px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #333;
     font-weight: bold;
     transition: color 0.3s;
+    padding: 3px 15px;
+    border-radius: 15px;
+    transition: all .3s linear;
 }
 
-nav ul li a:hover {
-    color: #e2a40d; /* Amarillo dorado al pasar el mouse */
+nav ul li a.active, nav ul li a:hover{
+    box-shadow: 0 0 0 2px #752fe6;
+    color: #752fe6;
 }
 
 /* Estilos para la sección de banner */
 section.banner {
     background: linear-gradient(to bottom, #fff, #f2f2f2); /* Fondo degradado de blanco a gris claro */
     color: #333; /* Texto negro */
-    padding: 100px 0;
-    text-align: center;
+    padding: 100px 5%;
+    /* text-align: center; */
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    overflow: hidden;
 }
-
+section.banner .content{
+    position: relative;
+    width: 50%;
+    z-index: 1;
+}
 section.banner h2 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -67,22 +86,46 @@ section.banner p {
 section.banner p span {
     font-size: 24px; /* Tamaño del emoji */
 }
+section.banner .img-baner{
+    width: 40%;
+    position: relative;
+    /* top: 20px;
+    right: 5%; */
+    
+}
+section.banner .img-baner img{
+    position: relative;
+    border-radius: 20px;
+}
+section.banner .img-baner::before{
+    content: "";
+    position: absolute;
+    top: -10%;
+    left: 10%;
+    background: #752fe64f;
+    height: 100%;
+    width: 100%;
+    border-radius: 30px;
+    /* z-index: -1; */
+}
 
 /* Estilos para el botón de contacto */
 .banner-button {
     display: inline-block;
-    background-color: #e2a40d; /* Amarillo dorado */
+    /* background: #752fe6; */
+    background: linear-gradient(to left,#310080,#8032ff);
     color: #fff; /* Texto blanco */
     padding: 15px 30px;
     text-decoration: none;
     font-weight: bold;
     border-radius: 50px; /* Botón redondeado */
     font-size: 20px;
-    transition: background-color 0.3s;
+    transition: all .3s linear;
 }
 
 .banner-button:hover {
-    background-color: #ffdd00; /* Color amarillo más brillante al pasar el mouse */
+    opacity: .6;
+    transform: scale(.9);
 }
 
 /* Estilos para las secciones (Inicio, Portafolio, Nosotros, Contacto) */
@@ -92,15 +135,15 @@ section {
 
 /* Estilos para la sección de Portafolio en index.html */
 section#portafolio {
-    background-color: #fff; /* Fondo blanco */
+    background: rgb(205, 191, 228);
     padding: 50px 0;
     text-align: center;
 }
 
 section#portafolio h2 {
     font-size: 32px;
-    margin-bottom: 20px;
-    color: #752fe6; /* Morado */
+    margin-bottom: 40px;
+    color: #333;
 }
 
 .portfolio-slider {
@@ -115,12 +158,13 @@ section#portafolio h2 {
 .portfolio-item {
     background-color: #f9f9f9; /* Fondo gris claro */
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    max-width: 300px;
 }
 
 .portfolio-item img {
@@ -133,6 +177,8 @@ section#portafolio h2 {
     font-size: 20px;
     margin-top: 10px;
     color: #333; /* Texto negro */
+    position: relative;
+    padding-top: 20px;
 }
 
 .portfolio-item p {
@@ -142,20 +188,21 @@ section#portafolio h2 {
 }
 
 .view-more-button {
-    background-color: #752fe6; /* Morado */
-    color: #fff; /* Texto blanco */
+    background-color: white; /* Morado */
+    color: #752fe6; /* Texto blanco */
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     font-size: 16px;
     text-decoration: none; /* decoración de enlace */
     margin: 0 auto; /* Centrar horizontalmente el botón */
+    margin-top: 20px;
     display: inline-block;
-    transition: background-color 0.3s;
+    transition: all .3s linear;
 }
 
 .view-more-button:hover {
-    background-color: #e2a40d; /* Amarillo dorado al pasar el mouse */
+    opacity: .8;
 }
 
 
@@ -163,10 +210,32 @@ section#portafolio h2 {
 /* Estilos para la sección de Nosotros */
 section#nosotros {
     background-color: #f2f2f2; /* Fondo gris claro */
-    padding: 50px 0;
+    padding: 50px 5%;
     text-align: center;
+    display: flex;
+    position: relative;
+    overflow-x: hidden;
 }
-
+section#nosotros .img-about{
+    width: 50%;
+}
+section#nosotros .img-about img{
+    border-radius: 30px;
+    width: 80%;
+}
+section#nosotros .img-about::before{
+    content: "";
+    height: 150px;
+    width: 150px;
+    background: #6911f786;
+    top: 5%;
+    left: 5%;
+    position: absolute;
+    border-radius: 50%;
+}
+section#nosotros .content{
+    width: 50%;
+}
 section#nosotros h2 {
     font-size: 32px;
     margin-bottom: 20px;
